tests/expectations/compiler/finalize/block_timestamp_fail.out
Error [ETYC0372034]: `block.timestamp` must be inside a `final fn` or a `final` block.
    --> compiler-test:3:30
     |
   3 |         assert_eq(timestamp, block.timestamp);
     |                              ^^^^^^^^^^^^^^^
